Authentication on the back-end And security

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSetting":{
+    "Token":"Sunflower Fund | non-profit organisation | stem cell donors | blood disease"
+  },
   "ConnectionStrings":{
     "DefaultConnection": "Data Source=SunflowerApp.db"
   },
